Bug Fix
- Fixed bug that would truncate the dataset title behind the download
button

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -196,12 +196,13 @@ header                                      { padding-top: 20px; }
 .dataset-details h5                         { margin: 30px 0; text-transform: uppercase; }
 .dataset-details ul                         { padding-left: 0; list-style: none; overflow: hidden; }
 .dataset-details .dataset-resources > li    { background-color: #eee; margin-bottom: 30px; padding: 20px; position: relative; }
-.dataset-details .dataset-resources li a    { display: block; font-size: 14px; font-weight: 600; color: #474747; overflow: hidden; }
+.dataset-details .dataset-resources li a    { display: block; padding-right: 110px; font-size: 14px; font-weight: 600; color: #474747; overflow: hidden; }
+.dataset-details .dataset-resources li p    { padding-right: 110px; }
 .dataset-details .dataset-resources span    { padding: 20px; line-height: 56px; background-color: #d8d8d8; position: absolute; right: 0; top: 0; bottom: 0; }
 .dataset-details .dataset-tags > li         { margin-right: 10px; margin-bottom: 10px; padding: 5px 10px; float: left; background-color: #0c9; color: #fff; }
 .dataset-details .table > tbody > tr > td   { font-size: 12px; }
 table.data > tbody > tr                     { cursor: pointer; }
-@media (max-width: 991px)                   { .dataset-details h1 { font-size: 14px; line-height: 20px; margin-bottom: 20px; } .dataset-details .dataset-resources li a { font-size: 12px; } }
+@media (max-width: 991px)                   { .dataset-details h1 { font-size: 14px; line-height: 20px; margin-bottom: 20px; } .dataset-details .dataset-resources li a { font-size: 12px; padding-right: 0; } .dataset-details .dataset-resources li p { padding-right: 0; } }
 
 /*********************************
     ORGANIZATIONS STYLES
